migrate to /v1/feed
