# socialapp/openapi.yaml
@@ -191,20 +191,10 @@ paths:
       summary: Reset password
       tags:
         - User
-  /v1/users/{username}/feed:
+  /v1/feed:
     get:
       description: Returns a users feed
       operationId: getUserFeed
-      parameters:
-        - description: The username of the user
-          example: johndoe
-          explode: false
-          in: path
-          name: username
-          required: true
-          schema:
-            type: string
-          style: simple
       responses:
         "200":
           content:
