# socialapp/pkg/controller/comment/comment.go
@@ -131,15 +131,30 @@ func (s *CommentService) GetUserComments(ctx context.Context, username string, l
 	return openapi.Response(http.StatusOK, comments), nil
 }
 
-func (s *CommentService) GetUserFeed(ctx context.Context, username string) (openapi.ImplResponse, error) {
+func (s *CommentService) GetUserFeed(ctx context.Context) (openapi.ImplResponse, error) {
 	log := contexthelper.GetLoggerInContext(ctx)
 	// validate the user exists
+	// get username from context
+	username, exists := contexthelper.GetUsernameInContext(ctx)
+	if !exists {
+		log.Error().
+			Msg("Error getting user from context")
+
+		return openapi.Response(http.StatusInternalServerError, openapi.Error{
+			Code:    http.StatusInternalServerError,
+			Message: "Internal server error",
+		}), nil
+	}
+
 	user, errGetUser := s.DB.GetUserByUsername(ctx, s.DBConn, username)
 	if errGetUser != nil {
 		log.Error().
 			Err(errGetUser).
 			Msg("Error getting user")
-		return openapi.Response(http.StatusNotFound, nil), nil
+		return openapi.Response(http.StatusInternalServerError, openapi.Error{
+			Code:    http.StatusInternalServerError,
+			Message: "Internal server error",
+		}), nil
 	}
 
 	// get followed users
@@ -150,8 +165,6 @@ func (s *CommentService) GetUserFeed(ctx context.Context, username string) (open
 			Msg("Error getting followed users")
 		return openapi.Response(http.StatusNotFound, nil), nil
 	}
-
-	log.Info().Msgf("followed users: %v", followedUsers)
 
 	// get comments for each followed user
 	comments := make([]openapi.Comment, 0, len(followedUsers)*20)
